@@ -1,5 +1,7 @@
 2001-05-18  Dave Peticolas  <dave@krondo.com>
 
+	* src/engine/io-gncxml-w.c: remove
+
 	* src/engine/Group.h: fix prototype
 
 	* src/doc/design/engine.texinfo: update docs
